--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="my-img right">
-            <img src="./images/My.jpeg" alt="">
+            <img src="My.jpeg" alt="">
         </div>
 
     </section>
@@ -53,7 +53,7 @@
     <section class="about" id="about">
         
         <div class="about-img left">
-            <img src="./images/My.jpeg" alt="" class="about-img-2">
+            <img src="My.jpeg" alt="" class="about-img-2">
             <span class="circle-spin"></span>
         </div>
 
@@ -205,7 +205,7 @@
     <h2 class="heading top">Latest <span>Projects</span></h2>
     <div class="portfolio-container bottom">
         <div class="portfolio-box">
-            <img src="./assets/candy-home.jpg" alt="Mental-Health-Chatbot">
+            <img src="candy-home.jpg" alt="Mental-Health-Chatbot">
             <div class="portfolio-layer">
                 <h4>AI Shakespeare NLP-Driven Text Generation</h4>
                 <p>Utilizing NLP and deep learning to generate text in the style of William Shakespeare. Based on LSTM neural networks.</p>
@@ -215,7 +215,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="./assets/movix-home.jpg" alt="Insurance Premium Prediction">
+            <img src="movix-home.jpg" alt="Insurance Premium Prediction">
             <div class="portfolio-layer">
                 <h4>Telco Customer Churn Analysis</h4>
                 <p>Predicting customer churn for a telecommunications company using supervised machine learning techniques.</p>
@@ -225,7 +225,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="./assets/mi.jpg" alt="Student Performance Prediction">
+            <img src="mi.jpg" alt="Student Performance Prediction">
             <div class="portfolio-layer">
                 <h4>Amazon Product Comparator</h4>
                 <p>A tool designed to revolutionize the way consumers engage with e-commerce by enabling efficient product comparisons on Amazon.</p>
@@ -235,7 +235,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="./assets/tutormate-home.jpg" alt="Movie Recommendation System">
+            <img src="tutormate-home.jpg" alt="Movie Recommendation System">
             <div class="portfolio-layer">
                 <h4>Visual Analytics of the Meta Kaggle Dataset</h4>
                 <p>Comprehensive analysis of the Meta-Kaggle dataset to explore trends within the Kaggle community.</p>
@@ -245,7 +245,7 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="./assets/blog.jpg" alt="Diwali sales Analysis">
+            <img src="blog.jpg" alt="Diwali sales Analysis">
             <div class="portfolio-layer">
                 <h4>Social Media Mining</h4>
                 <p>Research proposals and papers detailing analyses on various topics using data from social media APIs and sentiment analysis.</p>
